objects/LLC_BI__LoanTeam__c.object
<CustomObject>
    <description>The Loan Team Member object captures information about the loan teams assigned to loans in nCino.</description>
    <fields>
        <fullName>LLC_BI__Assigned_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required. It is manually populated. It identifies the role that has been assigned to a user when adding them to the loan team.</description>
        <label>Role</label>
        <referenceTo>LLC_BI__Role__c</referenceTo>
        <relationshipLabel>Loan Team Members</relationshipLabel>
        <relationshipName>Loan_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>Description of loan team member</description>
        <inlineHelpText>Description of loan team member</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Group__c</fullName>
        <description>Queue</description>
        <inlineHelpText>Queue</inlineHelpText>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <description>This field is a master detail field, used to specify the loan that the loan team is associated to.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Loan Team Members</relationshipLabel>
        <relationshipName>Loan_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Role__c</fullName>
        <description>This field is deprecated.  Replaced by Team_Role__c.</description>
        <label>-D Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Senior Loan Officer</fullName>
                </value>
                <value>
                    <fullName>Loan Officer</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Loan Ops</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Credit Analyst</fullName>
                </value>
                <value>
                    <fullName>Officer</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Loan Approver</fullName>
                </value>
                <value>
                    <fullName>Loan Approver Queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Team_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a lookup to the role of a user on the loan team (Closer, compliance, underwriter, etc)</description>
        <inlineHelpText>This field is deprecated.  It has been replaced by Assigned_Role.</inlineHelpText>
        <label>-D Role</label>
        <referenceTo>LLC_BI__Team_Role__c</referenceTo>
        <relationshipLabel>Loan Team Members</relationshipLabel>
        <relationshipName>Loan_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a look up to an nCino user that will be assigned a role, and associated to the loan team.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Loan_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Loan Team Member</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>LLC_BI__Loan__c</columns>
        <columns>LLC_BI__Assigned_Role__c</columns>
        <columns>LLC_BI__User__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LLC_BI__Description__c</columns>
        <columns>LLC_BI__Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LT-{00000000}</displayFormat>
        <label>Loan Team Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>